--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop id="backgroundVideo">
-        <source src="background.mp4" type="video/mp4">
+        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"> <!-- Test video -->
         Your browser does not support the video tag.
     </video>
     
