--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Video Background -->
+  <!-- Background Video -->
   <video autoplay muted loop id="background-video">
-    <source src="Untitled design.mp4" type="video/mp4">
+    <source src="background-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <!-- Headline -->
+  <!-- Headline at the top center -->
   <header>
     <h1>SVPCET COLLEGE BUS TRACKING SYSTEM</h1>
   </header>
 
-  <!-- Input Box -->
+  <!-- Interactive Input Box -->
   <main>
     <div class="input-container">
       <div class="input-box">
