--- a/index.html
+++ b/index.html
@@ -14,21 +14,19 @@
     Your browser does not support the video tag.
   </video>
 
-  <!-- Headline at the top center -->
+  <!-- Headline -->
   <header>
     <h1>SVPCET COLLEGE BUS TRACKING SYSTEM</h1>
   </header>
 
-  <!-- Interactive Input Box -->
-  <main>
-    <div class="input-container">
-      <div class="input-box">
-        <h2>Enter Your Bus Number</h2>
-        <input type="text" id="bus-number" placeholder="Bus Number" required>
-        <button onclick="redirect()">Track Bus</button>
-      </div>
+  <!-- Input Box -->
+  <div class="input-container">
+    <div class="input-box">
+      <h2>Enter Your Bus Number</h2>
+      <input type="text" id="bus-number" placeholder="Bus Number" required>
+      <button onclick="redirect()">Track Bus</button>
     </div>
-  </main>
+  </div>
 
   <script src="script.js"></script>
 </body>
